syntax = "proto3";

package auth.service.v1;

import "google/api/annotations.proto";

option go_package = "kratos/api/auth/service/v1;v1";

service AuthService {
  // Login endpoint
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  int32 user_id = 1;
  string token = 2;     // Optional: JWT or session token
  string message = 3;   // Login success/fail
}
